--- a/index.html
+++ b/index.html
@@ -14,20 +14,41 @@
     </style>
 </head>
 <body>
-    <canvas id="myCanvas" width="400" height="400"></canvas>
+    <canvas id="myCanvas" width="500" height="500"></canvas>
     <script type="text/javascript">
         const myCanvas=document.getElementById("myCanvas");
 
         const ctx = myCanvas.getContext("2d");
 
-        ctx.fillStyle="red";
+        ctx.fillStyle="pink";
         ctx.fillRect(20,20,100,100)
+ 
+        ctx.fillStyle="blue";
+        ctx.fillRect(100,100,100,100)
 
         ctx.fillStyle="green";
         ctx.fillRect(180,180,100,100)
 
-        ctx.fillStyle="blue";
-        ctx.fillRect(100,100,100,100)
+        ctx.strokeRect(260,260,100,100)
+
+        ctx.strokeStyle="red"
+        ctx.lineWidth =8
+
+        ctx.strokeRect(340,340,100,100)
+
+        ctx.fillStyle="rgba(128,244,242,0.6)";
+
+        ctx.beginPath()
+
+        ctx.moveTo(250,250)
+        ctx.lineTo(350,100)
+        ctx.lineTo(150,100)
+        ctx.closePath()
+        ctx.stroke()
+        ctx.fill()
+       
+        
+
     </script>
 </body>
 </html>
