--- a/index4.html
+++ b/index4.html
@@ -66,7 +66,7 @@
 
         ctx.font = "30px arial";
         ctx.fillText("Hola como estas", 130, 50);
-
+        ctx.strokeText("Hola como estas", 133, 53);
        
 
       
