--- a/index4.html
+++ b/index4.html
@@ -62,15 +62,21 @@
       ctx.fillText("Hola como estas", 130, 50);
       ctx.strokeText("Hola como estas", 133, 53);
 
-    
       const img = new Image();
       img.src = "calabaza.png";
 
-      
-      img.onload = function() {
-          ctx.drawImage(img, 300, 300 , 150,150);
+      img.onload = function () {
+        ctx.drawImage(img, 300, 300, 150, 150);
       };
 
+      // Create a Gradient
+      const grd = ctx.createLinearGradient(0, 0, 170, 0);
+      grd.addColorStop(0, "red");
+      grd.addColorStop(1, "yellow");
+
+      // Draw a filled Rectangle
+      ctx.fillStyle = grd;
+      ctx.fillRect(10, 200, 100, 150);
     </script>
   </body>
 </html>
